--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,27 @@
-Cython~=3.0a6
-DateTime~=4.3
-Flask-Caching~=1.9.0
-Flask~=1.1.2
-Theano~=1.0.5
-YahooFinanceSpider~=0.3
-boto3~=1.16.33
-holidays~=0.10.4
-jsonpickle~=1.4.2
-matplotlib~=3.3.3
-nasdaq-stock~=0.0.3
-numpy~=1.19.4
-pandas_datareader~=0.9.0
-pandas~=1.1.4
-py-stocks~=1.6.5
-pyotp~=2.4.1
-python-dateutil~=2.8.1
-pytz~=2020.4
-requests~=2.25.0
-robin_stocks~=1.5.2
-setuptools~=51.0.0
-tensorflow~=2.4.0rc4
-yagmail~=0.14.245
+boto3==1.16.37
+botocore==1.19.37
+cachetools==4.2.0
+certifi==2020.12.5
+chardet==4.0.0
+convertdate==2.3.0
+cssselect==1.1.0
+cssutils==1.0.2
+DateTime==4.3
+holidays==0.10.4
+idna==2.10
+jmespath==0.10.0
+korean-lunar-calendar==0.2.1
+lxml==4.6.2
+numpy==1.19.4
+pandas==1.1.5
+premailer==3.7.0
+PyMeeus==0.3.7
+pyotp==2.4.1
+python-dateutil==2.8.1
+pytz==2020.4
+requests==2.25.0
+s3transfer==0.3.3
+six==1.15.0
+urllib3==1.26.2
+yagmail==0.14.245
+zope.interface==5.2.0
