--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [tool.black]
 line-length = 120
 target-version = ['py38']
@@ -22,3 +21,11 @@ exclude = '''
                      # the root of the project
 )
 '''
+
+[tool.isort]
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
