--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.16.63
 convertdate==2.3.0
 flake8==3.8.4
 holidays==0.10.4
+isort==5.7.0
 korean-lunar-calendar==0.2.1
 lunarcalendar==0.0.9
 pylint==2.6.0
